--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -3,7 +3,7 @@ title = "I'm Alan Tanadi"
 author = "Alan Tanadi"
 #copyright = "2020-2021"
 description = "Call me Alan"
-profilePicture = "images/profile.jpg"
+profilePicture = "images/profile2.jpg"
 keywords = "Living by Dreams - LeCodingDev"
 favicon = "favicons/"
 # example ["css/custom.css"]
